--- a/config/environment.yml
+++ b/config/environment.yml
@@ -27,6 +27,7 @@ dependencies:
       - kiwisolver==1.4.4
       - matplotlib==3.6.1
       - matplotlib-inline==0.1.3
+      - metpy==1.4.1
       - nest-asyncio==1.5.5
       - numpy==1.23.2
       - packaging==21.3
