--- a/config/environment.yml
+++ b/config/environment.yml
@@ -2,8 +2,10 @@ name: atmoseer
 channels:
   - pytorch
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
+    - pip
     - pip:
       - asttokens==2.0.5
       - backcall==0.2.0
@@ -34,11 +36,11 @@ dependencies:
       - pandas==1.4.3
       - parso==0.8.3
       - pickleshare==0.7.5
-      - Pillow==9.2.0
+      - pillow==9.2.0
       - prompt-toolkit==3.0.30
       - psutil==5.9.1
       - pure-eval==0.2.2
-      - Pygments==2.12.0
+      - pygments==2.12.0
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytz==2022.2.1
